infrastructure/security/network-policies/overlays/prod/api-gateway.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: api-gateway-policy
  namespace: prod
spec:
  podSelector:
    matchLabels:
      app: api-gateway
  policyTypes:
    - Ingress
    - Egress
  ingress:
    - from:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: kube-system
  egress:
    - to:
        - podSelector:
            matchLabels:
              app: ms-user
        - podSelector:
            matchLabels:
              app: ms-post
        - podSelector:
            matchLabels:
              app: ms-social
        - podSelector:
            matchLabels:
              app: ms-event
        - podSelector:
            matchLabels:
              app: ws-service
        - podSelector:
            matchLabels:
              app: ms-storage
    - to:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: kube-system
          podSelector:
            matchLabels:
              k8s-app: kube-dns
