infrastructure/security/network-policies/overlays/prod/global-policies.yaml
# Default Deny All (Ingress & Egress)
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: default-deny-all
  namespace: prod
spec:
  podSelector: {}
  policyTypes:
    - Ingress
    - Egress
  egress:
    - to:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: kube-system
      ports:
        - protocol: UDP
          port: 53
        - protocol: TCP
          port: 53

---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: postgres-access-policy
  namespace: prod
spec:
  podSelector:
    matchLabels:
      app.kubernetes.io/name: postgresql
  policyTypes:
    - Ingress
  ingress:
    - from:
        - podSelector:
            matchLabels:
              app: ms-user
        - podSelector:
            matchLabels:
              app: ms-post
        - podSelector:
            matchLabels:
              app: ms-event
        - podSelector:
            matchLabels:
              app: ms-social
        - podSelector:
            matchLabels:
              app: ws-service
        - podSelector:
            matchLabels:
              app: outbox-runners
        - podSelector:
            matchExpressions:
              - key: app
                operator: In
                values:
                  - outbox-user
                  - worker-user
                  - outbox-post
                  - worker-post
                  - outbox-event
                  - worker-event
                  - outbox-social
                  - worker-social
                  - outbox-ws
                  - post-processor-user
                  - post-processor-post
                  - post-processor-event
                  - post-processor-social
                  - ms-storage
                  - post-processor-storage
                  - outbox-storage
                  - worker-storage
      ports:
        - protocol: TCP
          port: 5432

---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: neo4j-access-policy
  namespace: prod
spec:
  podSelector:
    matchLabels:
      app: neo4j
  policyTypes:
    - Ingress
  ingress:
    - from:
        - podSelector:
            matchExpressions:
              - key: app
                operator: In
                values:
                  - ms-social
                  - post-processor-social
                  - ms-storage
                  - post-processor-storage
                  - outbox-storage
                  - worker-storage
                  - worker-social
      ports:
        - protocol: TCP
          port: 7474
        - protocol: TCP
          port: 7687

---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: redis-access-policy
  namespace: prod
spec:
  podSelector:
    matchLabels:
      app.kubernetes.io/instance: redis
  policyTypes:
    - Ingress
  ingress:
    - from:
        - podSelector:
            matchLabels:
              app: ms-user
        - podSelector:
            matchLabels:
              app: ms-post
        - podSelector:
            matchLabels:
              app: ms-event
        - podSelector:
            matchLabels:
              app: ms-social
        - podSelector:
            matchLabels:
              app: ws-service
        - podSelector:
            matchExpressions:
              - key: app
                operator: In
                values:
                  - outbox-user
                  - worker-user
                  - outbox-post
                  - worker-post
                  - outbox-event
                  - worker-event
                  - outbox-social
                  - worker-social
                  - post-processor-user
                  - post-processor-post
                  - post-processor-event
                  - post-processor-social
                  - ms-storage
                  - post-processor-storage
                  - outbox-storage
                  - worker-storage
      ports:
        - protocol: TCP
          port: 6379
