infrastructure/security/network-policies/overlays/prod/ms-event.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: ms-event-policy
  namespace: prod
spec:
  podSelector:
    matchLabels:
      app: ms-event
  policyTypes:
  - Ingress
  - Egress
  ingress:
  - from:
    - podSelector:
        matchLabels:
          app: api-gateway
  egress:
  - to:
    - podSelector:
        matchLabels:
          app.kubernetes.io/instance: ms-event-db
    - podSelector:
        matchLabels:
          app.kubernetes.io/instance: redis
    - namespaceSelector:
        matchLabels:
          kubernetes.io/metadata.name: kube-system
      podSelector:
        matchLabels:
          k8s-app: kube-dns
