infrastructure/security/network-policies/overlays/prod/ms-post.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: ms-post-policy
  namespace: prod
spec:
  podSelector:
    matchExpressions:
      - key: app
        operator: In
        values:
          - ms-post
          - post-processor-post
  policyTypes:
  - Ingress
  - Egress
  ingress:
  - from:
    - podSelector:
        matchExpressions:
          - key: app
            operator: In
            values:
              - api-gateway
              - ms-event
              - ms-post
              - ms-social
              - ms-user
              - ws-service
              - post-processor-event
              - post-processor-post
              - post-processor-social
              - post-processor-user
  egress:
  - to:
    - podSelector:
        matchExpressions:
          - key: app
            operator: In
            values:
              - ms-event
              - ms-post
              - ms-social
              - ms-user
              - ws-service
  - to:
    - podSelector:
        matchLabels:
          app.kubernetes.io/instance: ms-post-db
    - podSelector:
        matchLabels:
          app.kubernetes.io/instance: redis
    - namespaceSelector:
        matchLabels:
          kubernetes.io/metadata.name: kube-system
      podSelector:
        matchLabels:
          k8s-app: kube-dns
