infrastructure/security/network-policies/overlays/prod/ms-user.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: ms-user-policy
  namespace: prod
spec:
  podSelector:
    matchExpressions:
      - key: app
        operator: In
        values:
          - ms-user
          - post-processor-user
  policyTypes:
    - Ingress
    - Egress
  ingress:
    - from:
        - podSelector:
            matchExpressions:
              - key: app
                operator: In
                values:
                  - api-gateway
                  - worker-user
                  - worker-post
                  - worker-social
                  - worker-event
    - from:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: monitoring
      ports:
        - protocol: TCP
          port: 3000
  egress:
    - to:
        - podSelector:
            matchExpressions:
              - key: app
                operator: In
                values:
                  - ms-event
                  - ms-post
                  - ms-social
                  - ms-user
                  - ws-service
    - to:
        - podSelector:
            matchLabels:
              app.kubernetes.io/instance: ms-user-db
        - podSelector:
            matchLabels:
              app.kubernetes.io/instance: redis
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: kube-system
          podSelector:
            matchLabels:
              k8s-app: kube-dns
